[package]
name = "yot_run"
version = "0.1.0"
edition = "2024"
authors = ["Ayotunde <yotstack@gmail.com>"]
description = "A work-stealing, multi-threaded async executor with non-blocking scheduling."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Joel-Ajayi/yot-run"
homepage = "https://github.com/Joel-Ajayi/yot-run"
documentation = "https://github.com/Joel-Ajayi/yot-run/REAME.md"
keywords = ["async", "executor", "work-stealing", "futures", "reactor"]
categories = ["asynchronous", "concurrency"]

[dependencies]
yot_run_macros = { version = "0.1.0", path = "../yot_run_macros" }
crossbeam-deque = "0.8.6"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8.21"
mio = { version = "1.1.1", features = ["os-poll", "net"] }
rand = "0.9.2"
metrics = "0.24.3"
metrics-exporter-prometheus = "0.18.1"
