[package]
name = "yot_run_macros"
version = "0.1.0"
edition = "2024"
authors = ["Ayotunde <yotstack@gmail.com>"]
description = "The wrapper macro for a work-stealing, multi-threaded async executor with non-blocking scheduling."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Joel-Ajayi/yot-run"
homepage = "https://github.com/Joel-Ajayi/yot-run"
documentation = "https://github.com/Joel-Ajayi/yot-run/REAME.md"
keywords = ["async", "executor", "work-stealing", "futures", "reactor"]
categories = ["asynchronous", "concurrency"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full"] }
